# suivi-bourse

./: .coderabbitai.yaml  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  data.json  docker-compose.yaml  grafana-dashboard-external.json  override.yaml  release-please-config.json  renovate.json  requirements.txt  script.py
.circleci/: config.yml
.github/: dependabot.yml
app/: .env.dev  Dockerfile  Pipfile  main.py  new.py  pyproject.toml  requirements.txt  schema.yaml
app/src/: influxdb_writer.py  main.py  performance.py  prometheus_exporter.py  schema.yaml  testing.py
app/src/events/: __init__.py  aggregator.py  loader.py  schemas.py  validator.py  watcher.py
app/tests/: conftest.py  test_accounts.py  test_aggregator.py  test_cash.py  test_configuration_manager.py  test_e2e.py  test_influxdb_writer.py  test_loader.py  test_metrics.py  test_performance.py  test_prometheus_exporter.py  test_schemas.py  test_validator.py  test_watcher.py
assets/: grafana-dashboard-external-v10.json  grafana-dashboard-external-v11.json  grafana-dashboard-external-v8.json  grafana-dashboard-external-v9.json  grafana-dashboard-external.json
chart/: Chart.yaml
data/: data-example.json  data.json
docker-compose/: .env  Makefile  config.yaml  docker-compose.dev.yaml  docker-compose.yaml  influxdb3-init.sh  influxdb3-token.json  settings.yaml
docs/: config.toml
patchs_libs/: base.py
utils/: Makefile  bumping.py  testing.py
(+94 files in other folders)
