[project]
name = "suivi-bourse"
version = "0.0.0"
description = "Monitors stock shares with yfinance and stores metrics in InfluxDB 3 Core for Grafana, with historical backfill."
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "APScheduler==3.11.3",
    "Cerberus==1.3.8",
    "PyYAML==6.0.3",
    "confuse==2.2.1",
    "logfmt-logger==0.1.2",
    "influxdb3-python>=0.17.0",
    "prometheus-client==0.25.0",  # legacy /metrics endpoint (backward compatibility)
    "urllib3==2.7.0",
    "yfinance==1.5.2",
    "pandas>=2.0.0",       # NaN-safe volume handling in main.py (also required by yfinance)
    "openpyxl>=3.1.0",
    "watchdog>=3.0.0",
    "numpy>=1.22.2",       # not directly required, pinned by Snyk to avoid a vulnerability
    "setuptools>=65.5.1",  # not directly required, pinned by Snyk to avoid a vulnerability
]

# Development / test tooling — installed by `uv sync`, excluded in Docker via UV_NO_DEV.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "flake8>=7.0.0",
]

# The app is a set of flat modules under src/ (not an installable package),
# so uv manages the environment only and never tries to build/install it.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
